# PortfolioProject

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
earnings_predictor/notebooks/: earnings_classifier.ipynb
earnings_predictor/src/features/: nlp_extractor.py
stat_arb/notebooks/: backtest_pairs.ipynb
stat_arb/src/features/: cointegrations.py
tests/: test_data_loader.py  test_integration.py
utils/: data_loader.py
