[project]
name = "quant-portfolio"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.37",
    "sec-edgar-downloader>=4.0.0",
    "python-dotenv>=1.2.1",
    "statsmodels>=0.14.6",
    "sec-parser>=0.58.1"
]

[project.optional-dependencies]
test = ["pytest>=7.4.0", "pytest-mock>=3.12.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow"]