[project]
name = "quant-portfolio"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.37",
    "sec-edgar-downloader>=4.0.0",
    "python-dotenv>=1.2.1",
    "statsmodels>=0.14.6",
    "sec-parser>=0.58.1",
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "edgartools>=5.15.3"
]

[project.optional-dependencies]
test = ["pytest>=7.4.0", "pytest-mock>=3.12.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow"]

[tool.setuptools.packages.find]
where = ["."]
include = ["stat_arb*", "earnings_predictor*"]